--- a/.github/workflows/run_python_script.yml
+++ b/.github/workflows/run_python_script.yml
@@ -1,33 +1,39 @@
 name: Run Python Script and Commit File
 
 on:
-  workflow_dispatch:
+    workflow_dispatch:
 
 jobs:
-  build:
-    runs-on: ubuntu-latest
+    build:
+        runs-on: ubuntu-latest
 
-    steps:
-      - name: Checkout repository
-        uses: actions/checkout@v2
+        steps:
+            - name: Checkout repository
+              uses: actions/checkout@v2
+              with:
+                  persist-credentials: false # 이 줄을 추가합니다
 
-      - name: Set up Python
-        uses: actions/setup-python@v2
-        with:
-          python-version: "3.x"
+            - name: Set up Python
+              uses: actions/setup-python@v2
+              with:
+                  python-version: "3.x"
 
-      - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install requests
+            - name: Install dependencies
+              run: |
+                  python -m pip install --upgrade pip
+                  pip install requests
 
-      - name: Run script
-        run: python crawl_naver.py
+            - name: Run script
+              run: python crawl_naver.py
 
-      - name: Commit file
-        run: |
-          git config --global user.name 'koorukuroo'
-          git config --global user.email 'koorukuroo@example.com'
-          git add naver.txt
-          git commit -m "Add naver.txt"
-          git push
+            - name: Commit file
+              run: |
+                  git config --local user.name 'koorukuroo'
+                  git config --local user.email 'koorukuroo@example.com'
+                  git add naver.txt
+                  git commit -m "Add naver.txt"
+            - name: Push
+              uses: ad-m/github-push-action@master
+              with:
+                  branch: "main"
+                  github_token: ${{ secrets.GH_TOKEN }} # 여기서 GH_TOKEN은 GitHub Secrets에 저장된 PAT입니다.
